recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:4: error: ';' expected but ')' found.
    right90)
           ^